// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/message/demo/custom-style.md correctly 1`] = `
<button
  class="ant-btn"
  type="button"
>
  <span>
    Customized style
  </span>
</button>
`;

exports[`renders ./components/message/demo/duration.md correctly 1`] = `
<button
  class="ant-btn"
  type="button"
>
  <span>
    Customized display duration
  </span>
</button>
`;

exports[`renders ./components/message/demo/hooks.md correctly 1`] = `
<button
  class="ant-btn ant-btn-primary"
  type="button"
>
  <span>
    Display normal message
  </span>
</button>
`;

exports[`renders ./components/message/demo/info.md correctly 1`] = `
<button
  class="ant-btn ant-btn-primary"
  type="button"
>
  <span>
    Display normal message
  </span>
</button>
`;

exports[`renders ./components/message/demo/loading.md correctly 1`] = `
<button
  class="ant-btn"
  type="button"
>
  <span>
    Display a loading indicator
  </span>
</button>
`;

exports[`renders ./components/message/demo/other.md correctly 1`] = `
<div
  class="ant-space ant-space-horizontal ant-space-align-center"
>
  <div
    class="ant-space-item"
    style="margin-right:8px"
  >
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        Success
      </span>
    </button>
  </div>
  <div
    class="ant-space-item"
    style="margin-right:8px"
  >
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        Error
      </span>
    </button>
  </div>
  <div
    class="ant-space-item"
  >
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        Warning
      </span>
    </button>
  </div>
</div>
`;

exports[`renders ./components/message/demo/thenable.md correctly 1`] = `
<button
  class="ant-btn"
  type="button"
>
  <span>
    Display sequential messages
  </span>
</button>
`;

exports[`renders ./components/message/demo/update.md correctly 1`] = `
<button
  class="ant-btn ant-btn-primary"
  type="button"
>
  <span>
    Open the message box
  </span>
</button>
`;
